--- a/contactsApp/app/src/main/res/layout/activity_new_contact.xml
+++ b/contactsApp/app/src/main/res/layout/activity_new_contact.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
     android:layout_height="match_parent"
-    tools:context="com.glr.contactsApp.AddContact">
+    tools:context="com.glr.contactsApp.NewContact">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,14 +22,5 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_add_contact" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
